# EnergyShield-AI

./: .env.example  .gitignore  ENERGYSHIELD_IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/agents/: entity_resolution_agent.py  event_extraction_agent.py  geopolitical_risk_agent.py  procurement_agent.py  report_agent.py  spr_agent.py
backend/commodities/: base_adapter.py  coal_adapter.py  critical_minerals_adapter.py  crude_oil_adapter.py  fertilizer_adapter.py  lng_adapter.py
backend/db/: init_db.py  session.py
backend/evaluation/: backtest_metrics.py  event_extraction_eval.py  recommendation_eval.py  scenario_eval.py
backend/graph/: graph_queries.py  in_memory_graph.py  kg_client.py  relationship_builder.py  risk_graph_updater.py  schema.cypher  seed_graph.py
backend/ingestion/: ais_collector.py  base_collector.py  coal_price_collector.py  commodity_price_collector.py  data_normalizer.py  gdelt_collector.py  http_client.py  import_baseline_collector.py  lng_price_collector.py  maritime_alert_collector.py  portwatch_collector.py  sanctions_collector.py  source_registry.py
backend/learning/: backtesting.py  disruption_case_library.py  feature_store.py  feedback_service.py  label_builder.py  model_registry.py  model_trainer.py
backend/ml/: event_classifier.py
backend/models/: commodity_schema.py  core_schema.py  data_source_schema.py  digital_twin_schema.py  event_schema.py  graph_schema.py  learning_schema.py  recommendation_schema.py  risk_schema.py  scenario_schema.py
deploy/: README.md  (+1 more)
(+163 files in other folders)
